[input:date] Fix style in dark mode

--- a/src/components/discovery-input/discovery-input-date-range/discovery-input-date-range.scss
+++ b/src/components/discovery-input/discovery-input-date-range/discovery-input-date-range.scss
@@ -275,7 +275,7 @@
 
   .daterangepicker .calendar-table .next span, .daterangepicker .calendar-table .prev span {
     color: var(--warp-view-tooltip-bg-color, $w10-white);
-    border: solid var(--warp-view-font-color, $w10-charcoal);
+    border: solid var(--warp-view-input-label-color, $w10-charcoal);
     border-width: 0 2px 2px 0;
     border-radius: 0;
     display: inline-block;
